--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.67.0",
+    "scss-reset": "^1.4.2",
     "vite": "^4.4.5"
   }
 }
