--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
