--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -27,7 +28,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.0.0",
     "sass": "^1.67.0",
     "scss-reset": "^1.4.2",
     "vite": "^4.4.5"
