--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "gh-pages": "^6.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
