--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "classnames": "^2.3.2",
     "gh-pages": "^6.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
