--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0"
   },
