--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-soul",
-  "homepage": "https://eugenekh81.github.io",
+  "homepage": "https://eugenekh81.github.io/the-soul/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
